# itmo-stella-typechecker

./: .gitignore  .gitmodules  LICENSE  README.md  dune-project  frozen_switch  stella_typechecker.opam
lib/: check_main.ml  check_types.ml  check_undefined_type_vars.ml  dune  errors.ml  passes.ml  replace_auto.ml  stella_typechecker.ml  type_compatibility.ml  type_map.ml  type_models.ml  utils.ml
lib/type_models/: choose_type_model.ml  default_type_model.ml  record_typing.ml  structural_type_model.ml  type_model.ml  variant_typing.ml
lib/typecheck_pass/: check_types.ml  check_types_with_reconstruction.ml  check_types_with_universal.ml  has_type_vars.ml  substitution.ml  type_constraints.ml  typecheck_pass.ml  unify.ml  universal_types.ml
lib/utils/: extentions.ml  has_type_vars.ml  pattern_matching_utils.ml  utils.ml  variant_type.ml
parser/: AbsSyntax.ml  LexSyntax.mll  ParSyntax.mly  PrintSyntax.ml  ShowSyntax.ml  SkelSyntax.ml  Stella_parser.ml  Syntax-2.cf  Syntax.cf  dune
test/: constants.py  discover_tests.py  dune  run_each.py  test_exec.py
test/data/: 001_example.stella  002_undefined_var.stella  003_let_in_correct.stella  004_expected_tuple.stella  005_expected_tuple_ok.stella  006_wrong_tuple_component.stella  007_tuple_index_out_of_bounds.stella  008_unexpected_tuple.stella  009_dot_record_ok.stella  010_dot_record_not_record.stella  011_dot_record_wrong_result_type.stella  012_dot_record_wrong_field.stella  013_record_constructor_ok.stella  014_record_constructor_missing_field.stella  015_record_constructor_extra_field.stella  empty.stella  (+2 more)
(+110 files in other folders)
